[project]
name = "bromcom-api-helpers"
version = "0.1.0"
description = "Optional helpers for the Bromcom Partner Data API 2.0 Python client (timetables)"
requires-python = ">=3.10"
dependencies = [
    "bromcom-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bromcom_helpers"]
