[project]
name = "bromcom-api-helpers"
version = "0.0.1"
description = "Optional helpers for the Bromcom Partner Data API 2.0 Python client (timetables)"
requires-python = ">=3.10"
dependencies = [
    "bromcom-api @ git+https://github.com/nickwatson/bromcom-python.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bromcom_helpers"]

# Allow `bromcom-api @ git+https://...` direct reference in dependencies.
# In monorepo dev, `tool.uv.sources` in the root pyproject.toml redirects this
# to the local `python/` workspace. In the published artifact, pip will fetch
# from GitHub directly.
[tool.hatch.metadata]
allow-direct-references = true
